Fixup spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,3 @@
     width: 700px;
     margin-bottom: 50px;
 }
-
-.links {
-    margin-bottom: 50px;
-}
